// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Span checkGrammar 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkGrammar 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkGrammar 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkGrammar 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span className 1`] = `
<span
  className="uu5-bricks-span my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span content 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.Bricks.Span content 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.Bricks.Span content 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.Bricks.Span content 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.Bricks.Span controlled 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span controlled 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span controlled 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span controlled 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span default props 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled 1`] = `
<span
  className="uu5-bricks-span uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Span disabled 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled 4`] = `
<span
  className="uu5-bricks-span uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Span docKit examples UU5.Bricks.Span should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Span
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={
      Object {
        "color": "red",
        "fontSize": "30px",
      }
    }
    tooltip={null}
  >
    Lorem ipsum
  </Span>
  <UU5.Common.TextCorrectorContextConsumer
    key="1"
    text=" dolor sit amet, consectetur "
  />
  <Span
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={
      Object {
        "backgroundColor": "#64B5F6",
      }
    }
    tooltip={null}
  >
    adipiscing elit.
  </Span>
  <UU5.Common.TextCorrectorContextConsumer
    key="3"
    text="Aliquam eu sollicitudin "
  />
  <Span
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    mainAttrs={null}
    name={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={
      Object {
        "fontWeight": "bold",
      }
    }
    tooltip={null}
  >
    elit
  </Span>
  <UU5.Common.TextCorrectorContextConsumer
    key="5"
    text="."
  />
</div>
`;

exports[`UU5.Bricks.Span dynamic 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span dynamic 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span dynamic 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span dynamic 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden 1`] = `
<span
  className="uu5-bricks-span uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden 4`] = `
<span
  className="uu5-bricks-span uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span id 1`] = `
<span
  className="uu5-bricks-span"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span mainAttrs 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span name 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex 1`] = `
<span
  className="uu5-bricks-span uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex 4`] = `
<span
  className="uu5-bricks-span uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected 1`] = `
<span
  className="uu5-bricks-span uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected 4`] = `
<span
  className="uu5-bricks-span uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span style 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span style 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span style 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span style 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector 2`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector 4`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span tooltip 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
